--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="comingsoon.html">Compétences</a></li>
       <li><a href="comingsoon.html">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="comingsoon.html">Portfolio</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
       <li><a href="comingsoon.html">Langues</a></li>
     </ul>
   </div>
