--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="comingsoon.html">Compétences</a></li>
       <li><a href="comingsoon.html">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="security.html">Portfolio</a></li>
       <li><a href="comingsoon.html">Langues</a></li>
     </ul>
   </div>
@@ -77,5 +77,20 @@
   </footer>
 
   <script src="script.js"></script>
+<script>
+document.addEventListener('contextmenu', event => event.preventDefault());
+
+document.addEventListener('keydown', function (event) {
+    if (
+        event.keyCode === 123 || // F12
+        (event.ctrlKey && event.shiftKey && event.keyCode === 73) || // Ctrl+Shift+I
+        (event.ctrlKey && event.keyCode === 85) || // Ctrl+U
+        (event.ctrlKey && event.keyCode === 83)    // Ctrl+S
+    ) {
+        event.preventDefault();
+    }
+});
+</script>
+  
 </body>
 </html>
