--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,29 +10,33 @@
   <link rel="stylesheet" href="stylecontact.css">
 </head>
 <body>
-  <!-- Main Section -->
   <section class="main-section">
     <div class="left-section">
       <h1>MIARINTSOA FANAMPY NIRINAH</h1>
-      <h2>Mes contact</h2>
+      <h2>Mes contacts</h2>
+      <p>Téléphone : <a href="tel:+261123456789" style="color:#fff;">+261 12 345 6789</a></p>
+      <p>Email : <a href="mailto:example@email.com" style="color:#fff;">example@email.com</a></p>
       <div class="social-icons">
         <a href="https://www.instagram.com" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com" target="_blank"><img src="facebook-icon.png" alt="Facebook"></a>
-        <a href="https://www.twitter.com" target="_blank"><img src="instagram-icon.png" alt="Twitter"></a>
+      </div>
+      <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d599.2675889804442!2d47.55707896452979!3d-18.89742624681455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDUzJzUwLjkiUyA0N8KwMzMnMjYuMyJF!5e1!3m2!1sfr!2smg!4v1745692167695!5m2!1sfr!2smg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
+
     <div class="right-section">
       <ul>
-        <li><a href="bio.html">Bio</a></li>
-        <li><a href="concept-store.html">Concept Store</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="book.html">Order My Book</a></li>
-        <li><a href="talks.html">Talks and Workshops</a></li>
-        <li><a href="contact.html">Contact Me</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="comingsoon.html">À propos</a></li>
+        <li><a href="comingsoon.html">Projets</a></li>
+        <li><a href="comingsoon.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="security.html">Portfolio</a></li>
       </ul>
     </div>
   </section>
 
   <script src="scriptcontact.js"></script>
+  <script src="scriptsecurejs.js"></script>
 </body>
 </html>
